force-app/main/default/objects/Trip__c/Trip__c.object-meta.xml
<CustomObject>
    <label>Trip Dispatched</label>
    <nameField>
        <displayFormat>TDR-{0000}</displayFormat>
        <label>Trip  Dispatch Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips Dispatched</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>