force-app/main/default/objects/Trip__c/fields/Assigned_Driver__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Trips Dispatched</relationshipLabel>
    <relationshipName>Trips_Dispatched</relationshipName>
    <type>Lookup</type>
</CustomField>