force-app/main/default/objects/Trip__c/fields/Dispatched_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Dispatched_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dispatched Vehicle</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Trips Dispatched</relationshipLabel>
    <relationshipName>Trips_Dispatched</relationshipName>
    <type>Lookup</type>
</CustomField>