force-app/main/default/objects/Trip__c/fields/Trip_Route__c.field-meta.xml
<CustomField>
    <fullName>Trip_Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip Route</label>
    <referenceTo>Route__c</referenceTo>
    <relationshipLabel>Trips Dispatched</relationshipLabel>
    <relationshipName>Trips_Dispatched</relationshipName>
    <type>Lookup</type>
</CustomField>